ADDED Mongodb Atlas

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb://127.0.0.1:27017/whatsapp
+MONGODB_URI=mongodb+srv://neogsuvam:uHxGScduyRan3pRr@cluster0.ukevq.mongodb.net/whatsapp?retryWrites=true&w=majority&appName=Cluster0
