--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,10 @@
         "src": "/(.*)",
         "dest": "index.js"
       }
-    ]
-  }
+    ],
+    "functions": {
+        "api/**/*.js": {
+            "timeout": 30
+        }
+    }
+}
