--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,10 @@
         "src": "/(.*)",
         "dest": "index.js"
       }
-    ]
-  } 
+    ],
+    "functions": {
+      "index.js": {
+        "timeout": 30
+      }
+    }
+  }
