--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,18 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "index.js",
-        "use": "@vercel/node"
-      }
+        {
+            "src": "index.js",
+            "use": "@vercel/node",
+            "config": {
+                "maxDuration": 30
+            }
+        }
     ],
     "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "index.js"
-      }
-    ],
-    "functions": {
-      "index.js": {
-        "timeout": 30 
-      }
-    }
-  }
+        {
+            "src": "/(.*)",
+            "dest": "index.js"
+        }
+    ]
+}
